--- a/scss/_department.scss
+++ b/scss/_department.scss
@@ -8,6 +8,7 @@
 		width: 100%;
 		display: flex;
 		align-items: flex-start;
+		flex-wrap: wrap;
 		justify-content: space-between;
 		padding: 0px 0px 150px;
 		margin: 0 auto;
@@ -48,44 +49,72 @@
 
 	.wrap {
 		width: 100%;
-		padding: 0px 0px 500px;
-		height: 350px;
+		height: 100%;
+		height: 550px;
+		flex-wrap: wrap;
+		display: flex;
+		align-content: space-between;
+		position: relative;
 		h2 {
 			font: bold 30px/1 "arial";
 			color: #000;
-			padding-bottom: 60px;
 		}
 		article {
-			float: left;
+			flex: 1;
+			position: relative;
+			padding-top: 20px;
+			opacity: 0.6;
+
+			transition: all 1s;
 			width: 280px;
 			margin-right: 20px;
+			height: 100%;
 			&:nth-of-type(4) {
 				margin-right: 0px;
 			}
+			&::before {
+				content: "";
+				display: block;
+				width: 100%;
+				height: 100%;
+				position: absolute;
+				top: 0;
+				left: -200px;
+				opacity: 0;
+				transition: 1s;
+				background-color: rgba(235, 213, 69, 0.989);
+			}
 			.txt {
+				width: 100%;
+				padding: 40px 10px 10px;
 				h3 {
-					text-align: center;
-					padding: 20px;
-				}
-				h4 {
-					text-align: center;
-					padding: 20px;
-					a {
-						font: bold 20px/1 "arial";
-						color: #000;
+					text-align: left;
+					transition: 1s;
+					margin-bottom: 30px;
+					color: white;
+					font: normal 25px/1 "arial";
+					&::after {
+						content: "";
+						display: block;
+						width: 40px;
+						height: 2px;
+						transition: 1s;
+						background: #777;
+						margin-top: 20px;
 					}
 				}
 				p {
-					font: bold 20px/1 "arial";
-					color: #000;
-					text-align: center;
+					transition: 1s;
+					font: normal 20px/1 "arial";
+					color: white;
+					text-align: right;
 				}
 			}
 			.pic {
 				width: 100%;
-				height: 280px;
 				overflow: hidden;
 				filter: grayscale(1);
+				transform-origin: left center;
 				transition: 1s;
 				img {
 					width: 100%;
@@ -94,6 +123,30 @@
 				}
 			}
 			&:hover {
+				flex: 1.5;
+				opacity: 1;
+				z-index: 2;
+				&::before {
+					opacity: 1;
+					left: 0;
+				}
+				.txt {
+					position: relative;
+					z-index: 3;
+
+					h3 {
+						color: #444;
+						font-size: 50px;
+						&::after {
+							width: 120px;
+							background-color: #efefef;
+						}
+					}
+					p {
+						color: #444;
+						font-size: 40px;
+					}
+				}
 				.pic {
 					filter: grayscale(0);
 				}
