--- a/scss/_community.scss
+++ b/scss/_community.scss
@@ -33,7 +33,7 @@
 					text-align: left;
 				}
 				&:nth-of-type(3) {
-					font-family: "맑은 고딕";
+					font-family: "BlackHanSans";
 				}
 				a {
 					color: #333;
