--- a/scss/_department.scss
+++ b/scss/_department.scss
@@ -1,7 +1,9 @@
 .department {
 	h2 {
-		font: bold 30px/1 "arial";
-		color: #000;
+		font-weight: bold;
+		font-size: 30px;
+		line-height: 1px;
+		color: #444;
 		padding-bottom: 60px;
 	}
 	.list {
@@ -23,8 +25,8 @@
 			align-items: center;
 
 			div {
-				width: 90px;
-				height: 90px;
+				width: 60px;
+				height: 60px;
 				img {
 					width: 100%;
 					height: 100%;
@@ -34,15 +36,17 @@
 			}
 			span {
 				width: 100%;
-				font-size: 30px;
-				padding-bottom: 5px;
+				font-family: "BlackHanSans";
+				font-size: 25px;
+				padding-top: 10px;
 				b {
-					font-size: 35px;
+					font-size: 30px;
 				}
 			}
 			p {
+				font-family: "BlackHanSans";
 				width: 100%;
-				font-size: 25px;
+				font-size: 20px;
 			}
 		}
 	}
@@ -56,15 +60,22 @@
 		align-content: space-between;
 		position: relative;
 		h2 {
-			font: bold 30px/1 "arial";
-			color: #000;
+			position: absolute;
+			z-index: 3;
+			top: 0px;
+			left: 0px;
+
+			font-weight: bold;
+			font-size: 30px;
+			line-height: 1px;
+			color: #444;
 		}
 		article {
 			flex: 1;
 			position: relative;
 			padding-top: 20px;
 			opacity: 0.6;
-
+			cursor: pointer;
 			transition: all 1s;
 			width: 280px;
 			margin-right: 20px;
@@ -78,7 +89,7 @@
 				width: 100%;
 				height: 100%;
 				position: absolute;
-				top: 0;
+				top: 45px;
 				left: -200px;
 				opacity: 0;
 				transition: 1s;
@@ -92,7 +103,9 @@
 					transition: 1s;
 					margin-bottom: 30px;
 					color: white;
-					font: normal 25px/1 "arial";
+					// color: black;
+					font-family: "BlackHanSans";
+					font-size: 20px;
 					&::after {
 						content: "";
 						display: block;
@@ -100,18 +113,22 @@
 						height: 2px;
 						transition: 1s;
 						background: #777;
-						margin-top: 20px;
+						margin-top: 10px;
 					}
 				}
 				p {
 					transition: 1s;
-					font: normal 20px/1 "arial";
+					font-family: "BlackHanSans";
+					font-size: 15px;
 					color: white;
+					// color: black;
+					font-weight: bold;
 					text-align: right;
 				}
 			}
 			.pic {
 				width: 100%;
+				height: 350px;
 				overflow: hidden;
 				filter: grayscale(1);
 				transform-origin: left center;
@@ -123,7 +140,7 @@
 				}
 			}
 			&:hover {
-				flex: 1.5;
+				flex: 1.3;
 				opacity: 1;
 				z-index: 2;
 				&::before {
@@ -135,16 +152,17 @@
 					z-index: 3;
 
 					h3 {
-						color: #444;
-						font-size: 50px;
+						color: black;
+						font-size: 30px;
 						&::after {
 							width: 120px;
 							background-color: #efefef;
 						}
 					}
 					p {
-						color: #444;
-						font-size: 40px;
+						color: black;
+
+						font-size: 25px;
 					}
 				}
 				.pic {
