--- a/scss/_join.scss
+++ b/scss/_join.scss
@@ -1,11 +1,12 @@
-@import "reset.scss";
 .join {
 	.inner {
 		.wrap {
 			width: 100%;
 			h2 {
-				font: bold 30px/1 "arial";
-				color: #000;
+				font-weight: bold;
+				font-size: 30px;
+				line-height: 1px;
+				color: #444;
 				padding-bottom: 60px;
 			}
 			#terms {
@@ -13,14 +14,18 @@
 				height: 200px;
 				resize: none;
 				padding: 10px 20px;
-				font: 13px/1.5 "arial";
-				color: #888;
+				// font: 13px/1.5 "arial";
+				font-family: "BlackHanSans";
+				font-size: 13px;
+				letter-spacing: 1px;
+				color: BLACK;
 				background: #efefef;
 			}
 			.agreement {
 				padding-bottom: 70px;
 				label[for="agree"] {
 					font-size: 14px;
+					font-family: "BlackHanSans";
 				}
 			}
 			table {
@@ -34,14 +39,14 @@
 				}
 				th {
 					width: 20%;
-
 					input[type="reset"],
 					input[type="submit"] {
 						width: 30%;
 						height: 40px;
-
 						margin: 10px;
-						font: bold 14px/40px "arial";
+						font-size: 14px;
+						line-height: 40px;
+						font-weight: bold;
 						color: #555;
 						cursor: pointer;
 						transition: 0.5s;
@@ -64,7 +69,7 @@
 						border: 1px solid #aaa;
 					}
 					input[type="radio"],
-					input[type="chekbox"] {
+					input[type="checkbox"] {
 						margin-right: 30px;
 					}
 					textarea {
@@ -75,11 +80,12 @@
 						padding: 10px;
 						border: 1px solid #aaa;
 					}
-					p {
-						font: 11px/1 "맑은 고딕";
-						color: hotpink;
-						margin-top: 5px;
-					}
+					// p {
+					// 	font: 11px/1 "맑은 고딕";
+
+					// 	color: hotpink;
+					// 	margin-top: 5px;
+					// }
 				}
 			}
 		}
