--- a/scss/_location.scss
+++ b/scss/_location.scss
@@ -25,7 +25,10 @@
 				width: 200px;
 				height: 40px;
 				background: #efefef;
-				font: bold 12px/40px "맑은 고딕";
+				font-weight: bold;
+				font-size: 14px;
+				line-height: 40px;
+				font-family: "BlackHanSans";
 				color: #333;
 				text-align: center;
 			}
@@ -46,7 +49,11 @@
 				width: 200px;
 				height: 40px;
 				background: #efefef;
-				font: bold 12px/40px "맑은 고딕";
+				font-weight: bold;
+				font-size: 14px;
+				line-height: 40px;
+				font-family: "BlackHanSans";
+
 				color: #333;
 				text-align: center;
 			}
@@ -63,10 +70,12 @@
 		padding: 0px 0 150px;
 		margin: 0 auto;
 		h1 {
-			color: #333;
+			color: #444;
 			float: left;
 			width: 100px;
-			font: bold 40px/1.2 "arial";
+			font-weight: bold;
+			font-size: 40px;
+			letter-spacing: 1px;
 		}
 		.tab {
 			position: relative;
@@ -109,8 +118,10 @@
 				&:checked ~ label h3 {
 					background: #efefef;
 					padding: 2px 10px;
-					font: bold px/1 "arial";
-					color: #333;
+					// font: bold px/1 "arial";
+					font-weight: bold;
+					font-size: 25px;
+					color: #444;
 					// border-radius: 2px;
 					// box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
 				}
@@ -131,7 +142,6 @@
 				h2 {
 					width: 40px;
 					height: 40px;
-					background: #333;
 					color: rgba(235, 213, 69, 0.989);
 					background: #efefef;
 					font-size: 20px;
@@ -141,7 +151,7 @@
 				h3 {
 					position: relative;
 					font-weight: 500;
-					color: #333;
+					color: #444;
 					z-index: 10;
 					//너무 조잡스러운가
 					// &:after {
