--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,42 +3,16 @@
 $tablet: 1179px;
 $mobile: 539px;
 
+@import url("https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Ubuntu:wght@500&display=swap");
 @import "sub_layout.scss";
 @import "community.scss";
 @import "department.scss";
 @import "gallery.scss";
 @import "join.scss";
 @import "location.scss";
+@import "reset.scss";
+@import "sub_layout.scss";
 @import "youtube.scss";
-
-* {
-	margin: 0px;
-	padding: 0px;
-	box-sizing: border-box;
-}
-
-ul,
-ol,
-li {
-	list-style: none;
-}
-
-a {
-	text-decoration: none;
-}
-
-.hidden {
-	position: absolute;
-	top: -99999999px;
-	opacity: 0;
-}
-
-fieldset {
-	border: none;
-}
-table {
-	border-collapse: collapse;
-}
 
 .Scroll {
 	position: fixed;
@@ -100,11 +74,11 @@ table {
 		display: flex;
 		justify-content: flex-start;
 		align-items: center;
-		.hd_logo {
-			img {
-				filter: invert(86%) sepia(17%) saturate(1662%)
-					hue-rotate(37deg) brightness(10%) contrast(84%);
+		h1 {
+			a {
+				color: #fff;
 				width: 100px;
+				font-size: 40px;
 			}
 		}
 		.menuWeb {
@@ -124,12 +98,15 @@ table {
 						// justify-content: center;
 						// align-items: center;
 						padding: 0px 20px;
-						font: bold 20px/100px "arial";
+						font-weight: bold;
+						font-size: 20px;
+						line-height: 100px;
 						color: white;
 						opacity: 0.7;
 						text-align: center;
 						transition: 0.3s ease;
 						&:hover {
+							opacity: 1;
 							color: rgba(235, 213, 69, 0.989);
 						}
 					}
@@ -211,6 +188,7 @@ table {
 		.menuMo {
 			width: 270px;
 			height: 100vh;
+			letter-spacing: 1px;
 			background-color: rgba(235, 213, 69, 0.989);
 			position: fixed;
 			top: 0;
@@ -229,13 +207,16 @@ table {
 				letter-spacing: 1px;
 				a {
 					display: block;
-					font: bold 24px/1 "arial";
-					color: #fff;
+					font-weight: bold;
+					margin: 15px auto;
+					font-size: 40px;
+					line-height: 1px;
+					color: rgba(0, 0, 0, 0.747);
 					text-align: center;
 				}
 				span {
 					font-size: 12px;
-					color: #aaa;
+					color: #444;
 				}
 			}
 			#gnbMo {
@@ -243,11 +224,15 @@ table {
 					a {
 						display: block;
 						width: 100%;
-						padding: 20px 0;
-						border-bottom: 1px solid #444;
-						font: bold 14px/1 "arial";
-						color: #888;
+						padding: 30px 0;
+						font-weight: bold;
+						font-size: 20px;
+						line-height: 1px;
+						color: #efefef;
 						text-align: center;
+						&:hover {
+							color: #444;
+						}
 					}
 				}
 			}
@@ -278,14 +263,15 @@ table {
 			transform: translate(-50%, -50%);
 			z-index: 2;
 			h1 {
-				font: bold 50px/1 "arial";
+				font-weight: bold;
+				font-size: 50px;
+				line-height: 1px;
 				color: rgba(235, 213, 69, 0.989);
 				text-align: center;
 			}
 		}
 		ul {
 			position: absolute;
-
 			width: calc(100% * 3);
 			height: 100%;
 			margin-left: 0;
@@ -298,24 +284,26 @@ table {
 				display: flex;
 				justify-content: center;
 				align-items: center;
-				font: bold 20vw/1 "arial";
-				opacity: 0.7;
+				font-weight: bold;
+				font-size: 20vw;
+				line-height: 1px;
+				opacity: 0.8;
 				&[data-index="1"] {
-					background: url(../img/DEUX\ VILLE\ _\ livingaxis.jpg)
+					background: url(../img/index_visual/visual2.jpg)
 						no-repeat center/cover;
 					// background-color: hotpink;
 					// height: 100%;
 					// width: 100%;
 				}
 				&[data-index="2"] {
-					background: url(../img/Koral\ Brothers\ Inc_\ -\ Hamptons\ Custom\ Home\ Builder\ &\ General\ Contractors.png)
+					background: url(../img/index_visual/visual1.jpg)
 						no-repeat center/cover;
 					opacity: 0.5;
 					height: 100%;
 					width: 100%;
 				}
 				&[data-index="3"] {
-					background: url(../img//project_villa.jpg)
+					background: url(../img/index_visual/visual3.jpg)
 						no-repeat center/cover;
 					background-color: white;
 					height: 100%;
@@ -359,7 +347,9 @@ table {
 				transition: all 0.5s;
 				opacity: 0;
 				transform: translate(100%, -50%);
-				font: bold 12px/1 "arial";
+				font-weight: bold;
+				font-size: 12px;
+				line-height: 1px;
 				color: rgba(235, 213, 69, 0.989);
 			}
 			&::before {
@@ -422,7 +412,9 @@ table {
 				transform: translate(-150%, -50%);
 				opacity: 0;
 				transition: all 0.5s;
-				font: bold 12px/1 "arial";
+				font-weight: bold;
+				font-size: 12px;
+				line-height: 1px;
 				color: rgba(235, 213, 69, 0.989);
 			}
 			&::before {
@@ -474,8 +466,6 @@ table {
 #information.action {
 	width: 100%;
 	padding-bottom: 150px;
-
-	// (헤더 100)  +   (비쥬얼 하이트 600 마진탑 -100)
 	.inner {
 		width: 1180px;
 		height: 100%;
@@ -484,27 +474,33 @@ table {
 		display: flex;
 		justify-content: space-between;
 		align-items: flex-start;
+		padding: 10px;
 		.wrap {
 			width: 600px;
 			height: 100%;
 			margin-right: 20px;
 			h1 {
-				margin: 70px 0px 30px;
+				margin: 70px 0px 40px;
 				text-align: left;
-				font: bold 50px/1 "arial";
+				font-weight: bold;
+				font-size: 50px;
+				line-height: 1px;
 				color: rgba(235, 213, 69, 0.989);
 			}
 			p {
-				font: 20px/1.3 "arial";
-				letter-spacing: 1.3px; // 레터 스페이싱이 안먹음...
+				font-weight: normal;
+				font-family: arial;
+				font-size: 20px;
+				letter-spacing: 1.3px;
 			}
 			a {
 				display: block;
 				width: 150px;
 				height: 40px;
 				border: 1px solid;
-				letter-spacing: 1px;
-				font: bold 15px/40px "arial";
+
+				font-size: 15px;
+				line-height: 40px;
 				color: #fff;
 				text-align: center;
 				letter-spacing: 2px;
@@ -520,7 +516,7 @@ table {
 
 	.QiuckJoin {
 		position: relative;
-		margin-top: -71px;
+		margin-top: -81px;
 		border-radius: 0px;
 		min-width: 500px;
 		form {
@@ -531,6 +527,7 @@ table {
 				height: 70px;
 				line-height: 70px;
 				font-size: 30px;
+				letter-spacing: 1px;
 			}
 			fieldset {
 				padding: 15px;
@@ -542,9 +539,11 @@ table {
 
 					th {
 						width: 40%;
-						padding: 20px 30px;
-						font: bold 18px/1 "arial";
-						// border-bottom: 1px solid rgba(235, 213, 69, 0.989);
+						padding: 30px 30px;
+						// font-weight: bold;
+						font-size: 20px;
+						line-height: 1px;
+						// border-bottom: 1px solids rgba(235, 213, 69, 0.989);
 						color: #666;
 						// border-right: 1px solid #bbb;
 						// border-bottom: 1px solid #bbb;
@@ -558,7 +557,8 @@ table {
 							margin-left: 40px;
 							background-color: rgba(28, 27, 23, 0.989);
 							cursor: pointer;
-							font: bold 14px/1 "arial";
+							font-size: 14px;
+							line-height: 1px;
 							color: #fff;
 						}
 					}
@@ -577,7 +577,9 @@ table {
 								rgba(235, 213, 69, 0.989);
 							background: none;
 							text-align: center;
-							font: normal 16px/1 "arial";
+							font-weight: normal;
+							font-size: 16px;
+							line-height: 1px;
 						}
 					}
 				}
@@ -608,7 +610,6 @@ table {
 	}
 	main {
 		width: 100%;
-		// overflow: hidden;
 		.inner {
 			ul {
 				width: 100%;
@@ -616,12 +617,15 @@ table {
 				justify-content: space-around;
 				align-items: center;
 				padding-top: 80px;
+
 				li {
 					width: 100%;
 					height: 100%;
 					// display: block;
-					padding: 1px 41px;
-					font: bold 20px/1 "arial";
+					// padding: 1px 41px;
+					font-weight: bold;
+					font-size: 18px;
+					line-height: 1px;
 					color: black;
 					text-align: center;
 					a {
@@ -629,7 +633,6 @@ table {
 						height: 100%;
 						display: block;
 						padding: 20px 0px;
-						font: bold 18px/1 "arial";
 						color: rgba(0, 0, 0, 0.747);
 						text-align: center;
 						transition: all 0.3s;
@@ -686,11 +689,16 @@ table {
 					height: 500px;
 					position: relative;
 					h2 {
-						padding: 0 0 30px;
-						font: bold 40px/1.3 "arial";
+						padding: 10px 0px 50px;
+						// font: bold 40px/1.3 "arial";
+						// font-weight: bold;
+						font-size: 40px;
+						line-height: 1.3px;
 					}
 					p {
-						font: 20px/1.3 "arial";
+						font-family: arial;
+						font-size: 20px;
+						letter-spacing: 1px;
 						width: 100%;
 						text-align: left;
 					}
@@ -698,16 +706,19 @@ table {
 						display: block;
 						width: 200px;
 						text-align: center;
-						margin: 80px 10px 10px;
+						margin: 40px 0px 10px;
 						border: 1px solid black;
 						padding: 20px 30px;
 						color: black;
 						letter-spacing: 1px;
-						font: 13px/1.3 "arial";
+
+						font-weight: bold;
+						font-size: 15px;
+						line-height: 1.3px;
 						transition: 0.3s ease;
 						&:hover {
 							background-color: #000;
-							color: #fff;
+							color: #efefef;
 						}
 					}
 				}
@@ -725,7 +736,7 @@ table {
 	width: 100%;
 	padding: 150px 0px;
 	opacity: 1;
-	transform: rotateY(200deg) translateY(100px);
+	transform: rotateY(100deg) translateY(300px);
 	transition: 1s ease;
 	.inner {
 		width: 1180px;
@@ -775,8 +786,7 @@ table {
 					z-index: 3;
 				}
 				a {
-					font-size: 15px;
-					font-family: "arial";
+					font-size: 20px;
 					color: rgba(235, 213, 69, 0.989);
 					position: absolute;
 					z-index: 5;
@@ -819,13 +829,16 @@ table {
 	.inner {
 		width: 1180px;
 		margin: 0 auto;
+		padding: 10px;
 		&::after {
 			content: "";
 			display: block;
 			clear: both;
 		}
 		h1 {
-			font: bold 30px/1 "arial";
+			font-weight: bold;
+			font-size: 30px;
+			line-height: 1px;
 			color: rgba(0, 0, 0, 0.747);
 			float: left;
 			img {
@@ -840,8 +853,12 @@ table {
 				float: left;
 				margin-left: 20px;
 				a {
-					font: bold 14px/1 "arial";
+					// font: bold 14px/1 "arial";
+					font-size: 20px;
+					line-height: 1px;
+					font-weight: bold;
 					color: rgba(0, 0, 0, 0.747);
+					// color: rgba(235, 213, 69, 0.989);
 				}
 			}
 		}
@@ -850,7 +867,6 @@ table {
 			width: 100%;
 			font: 14px/1.3 "arial";
 			color: rgba(0, 0, 0, 0.747);
-
 			margin-bottom: 20px;
 			margin-top: 20px;
 			padding-top: 20px;
@@ -919,7 +935,7 @@ table {
 				width: 100%;
 				h1 {
 					text-align: center;
-					margin: 0px 0px 30px;
+					margin: 30px 0px 40px;
 					padding-top: 0;
 				}
 				p {
@@ -932,6 +948,23 @@ table {
 		}
 		.QiuckJoin {
 			margin: 50px auto 0;
+			form {
+				h1 {
+					text-align: center;
+				}
+				fieldset {
+					table {
+						th {
+							input[type="submit"] {
+								width: 100%;
+								margin-left: 0px;
+								margin-top: 20px;
+								height: 30px;
+							}
+						}
+					}
+				}
+			}
 		}
 	}
 
@@ -985,6 +1018,7 @@ table {
 			overflow: hidden;
 			padding: 0px 10px;
 			display: block;
+			padding: 10px;
 		}
 	}
 }
@@ -995,7 +1029,8 @@ table {
 			.inner {
 				top: 40%;
 				h1 {
-					font: bold 25px/1 "arial";
+					font-size: 25px;
+					font-weight: bold;
 				}
 			}
 		}
@@ -1016,7 +1051,10 @@ table {
 		.inner {
 			.wrap {
 				h1 {
-					font: bold 25px/1 "arial";
+					// font: bold 25px/1 "arial";
+					font-weight: bold;
+					font-size: 25px;
+					line-height: 1px;
 				}
 			}
 		}
@@ -1106,11 +1144,12 @@ table {
 	}
 	#footer {
 		.inner {
+			padding: 10px;
 			h1 {
 				margin-bottom: 20px;
 			}
 			ul {
-				width: 100%;
+				// width: 100%;
 				li {
 					margin-left: 0px;
 					margin: 5px;
