--- a/css/style.css
+++ b/css/style.css
@@ -280,6 +280,9 @@
   #footer_sub .inner h1 {
     margin-bottom: 20px;
   }
+  #footer_sub .inner ul {
+    width: 100%;
+  }
   #footer_sub .inner ul li {
     margin-left: 0px;
     margin: 5px;
@@ -342,7 +345,7 @@
   height: 30px;
   background: rgba(235, 213, 69, 0.989);
   color: #eee;
-  font-size: 20px;
+  font-size: 30px;
   text-align: center;
 }
 .community .pagination .next {
@@ -352,7 +355,7 @@
   height: 30px;
   background: rgba(235, 213, 69, 0.989);
   color: #eee;
-  font-size: 20px;
+  font-size: 30px;
   text-align: center;
 }
 .community .pagination .numbers {
@@ -389,6 +392,9 @@
   }
   .community .inner table tr td:nth-of-type(4) {
     display: none;
+  }
+  .community .inner .pagination {
+    margin-bottom: 30px;
   }
   .community .inner .pagination .numbers a:nth-of-type(6) {
     display: none;
@@ -436,8 +442,7 @@
   align-items: flex-start;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding: 0px 0px 150px;
-  margin: 0 auto;
+  margin: 0px auto 150px;
 }
 .department .list li + li {
   border-left: 1px solid #ddd;
@@ -497,7 +502,6 @@
   opacity: 0.6;
   cursor: pointer;
   transition: all 1s;
-  width: 280px;
   margin-right: 20px;
   height: 100%;
 }
@@ -589,7 +593,7 @@
 
 @media screen and (max-width: 1179px) {
   .department .wrap {
-    height: 100%;
+    height: 750px;
     max-width: 1180px;
     overflow: hidden;
     padding: 0px 10px;
@@ -607,7 +611,6 @@
   }
   .department .list {
     justify-content: center;
-    margin: 0px auto;
   }
   .department .list li + li {
     border-left: none;
@@ -627,13 +630,12 @@
   }
   .department .wrap article {
     width: 100%;
-    padding: 50px 0px;
+  }
+  .department .wrap article::before {
+    height: 50%;
   }
   .department .wrap article .txt {
     padding: 30px 10px 10px;
-  }
-  .department .wrap article .pic {
-    height: 100%;
   }
   .department .wrap article:hover .txt h3 {
     font-size: 20px;
@@ -780,11 +782,35 @@
   }
 }
 @media screen and (max-width: 539px) {
+  .gallery #searchBox {
+    padding: 0px 60px 0px;
+  }
   .gallery #wrap {
     max-width: 1180px;
   }
   .gallery #wrap #list .item {
     width: 33.3333333333%;
+    padding: 10px;
+  }
+  .gallery #wrap #list .item div {
+    padding: 10px;
+  }
+  .gallery #wrap #list .item div p {
+    font-size: 10px;
+    margin-bottom: 10px;
+  }
+  .gallery #wrap #list .item div span strong {
+    font-size: 10px;
+  }
+  .gallery aside {
+    top: 60%;
+    left: 50%;
+    transform: translate(-60%, -50%);
+    width: 100vw;
+    height: 50vh;
+  }
+  .gallery aside span {
+    right: 0px;
   }
 }
 .join .inner .wrap {
@@ -1040,7 +1066,7 @@
   position: absolute;
   right: 20px;
   font-size: 32px;
-  transition: all 1s;
+  transition: all 0.5s;
   color: rgba(0, 0, 0, 0.1);
 }
 .location .container .tab label h2 {
@@ -1070,6 +1096,40 @@
   z-index: 10;
 }
 
+@media screen and (max-width: 1179px) {
+  .location #map {
+    width: 100%;
+    height: 300px;
+  }
+  .location .container {
+    width: 100%;
+    height: 700px;
+    padding: 100px 10px 0px;
+  }
+}
+@media screen and (max-width: 539px) {
+  .location .traffic li a {
+    width: 100px;
+  }
+  .location .branch li a {
+    width: 70px;
+  }
+  .location .container {
+    width: 100%;
+    height: 900px;
+    padding: 100px 10px 0px;
+  }
+  .location .container h1 {
+    font-size: 35px;
+    width: 100%;
+  }
+  .location .container .tab {
+    width: 100%;
+  }
+  .location .container .tab input[type=radio]:checked ~ label h2 {
+    left: 70%;
+  }
+}
 * {
   margin: 0px;
   padding: 0px;
@@ -1388,6 +1448,9 @@ table {
   #footer_sub .inner h1 {
     margin-bottom: 20px;
   }
+  #footer_sub .inner ul {
+    width: 100%;
+  }
   #footer_sub .inner ul li {
     margin-left: 0px;
     margin: 5px;
@@ -1475,6 +1538,30 @@ table {
   color: rgba(235, 213, 69, 0.989);
 }
 
+@media screen and (max-width: 1179px) {
+  .vidList {
+    justify-content: center;
+    align-items: center;
+  }
+  .vidList article {
+    width: 380px;
+    height: 380px;
+    margin-right: 20px;
+  }
+  .vidList article:nth-child(4n) {
+    margin-right: 20px;
+  }
+}
+@media screen and (max-width: 539px) {
+  .vidList article {
+    width: 100%;
+    height: 100%;
+    margin: 10px auto;
+  }
+  .vidList article:nth-child(4n) {
+    margin-right: 0px;
+  }
+}
 .Scroll {
   position: fixed;
   right: 1vw;
@@ -2394,7 +2481,7 @@ table {
   }
   #information.action .inner .wrap h1 {
     font-weight: bold;
-    font-size: 25px;
+    font-size: 35px;
     line-height: 1px;
   }
   #information.action .QiuckJoin {
