--- a/scss/_department.scss
+++ b/scss/_department.scss
@@ -11,8 +11,7 @@
 		align-items: flex-start;
 		flex-wrap: wrap;
 		justify-content: space-between;
-		padding: 0px 0px 150px;
-		margin: 0 auto;
+		margin: 0px auto 150px;
 		li + li {
 			border-left: 1px solid #ddd;
 		}
@@ -62,7 +61,6 @@
 			z-index: 3;
 			top: 0px;
 			left: 0px;
-
 			font-weight: bold;
 			font-size: 30px;
 			color: #444;
@@ -74,7 +72,6 @@
 			opacity: 0.6;
 			cursor: pointer;
 			transition: all 1s;
-			width: 280px;
 			margin-right: 20px;
 			height: 100%;
 			&:nth-of-type(4) {
@@ -173,14 +170,14 @@
 @media screen and (max-width: $tablet) {
 	.department {
 		.wrap {
-			height: 100%;
+			height: 750px;
 			max-width: 1180px;
 			overflow: hidden;
 			padding: 0px 10px;
+			// height: 600px;
 		}
 		article {
 			width: 100%;
-
 			.pic {
 				height: 100%;
 			}
@@ -195,7 +192,6 @@
 		}
 		.list {
 			justify-content: center;
-			margin: 0px auto;
 			li + li {
 				border-left: none;
 			}
@@ -215,12 +211,12 @@
 			}
 			article {
 				width: 100%;
-				padding: 50px 0px;
+
+				&::before {
+					height: 50%;
+				}
 				.txt {
 					padding: 30px 10px 10px;
-				}
-				.pic {
-					height: 100%;
 				}
 				&:hover {
 					.txt {
