--- a/scss/_location.scss
+++ b/scss/_location.scss
@@ -108,7 +108,7 @@
 					position: absolute;
 					top: 0px;
 					left: 80%;
-					// color: rgba(255, 255, 255, 0.2);
+
 					color: rgba(235, 213, 69, 0.989);
 					justify-content: flex-end;
 					font-size: 100px;
@@ -136,7 +136,7 @@
 					position: absolute;
 					right: 20px;
 					font-size: 32px;
-					transition: all 1s;
+					transition: all 0.5s;
 					color: rgba(0, 0, 0, 0.1);
 				}
 				h2 {
@@ -153,26 +153,6 @@
 					font-weight: 500;
 					color: #444;
 					z-index: 10;
-					//너무 조잡스러운가
-					// &:after {
-					// 	content: "";
-					// 	position: absolute;
-					// 	left: 0;
-					// 	bottom: -5px;
-					// 	width: 0px;
-					// 	height: 2px;
-					// 	margin: 5px 0 0;
-					// 	transition: all 0.2s ease-in-out;
-					// 	transition-duration: 0.3s;
-					// 	opacity: 0;
-					// 	background-color: rgba(235, 213, 69, 0.989);
-					// }
-					// &:hover {
-					// 	&:after {
-					// 		width: 100%;
-					// 		opacity: 1;
-					// 	}
-					// }
 				}
 			}
 			.content {
@@ -184,6 +164,56 @@
 					padding: 10px 0;
 					color: #333;
 					z-index: 10;
+				}
+			}
+		}
+	}
+}
+
+@media screen and (max-width: $tablet) {
+	.location {
+		#map {
+			width: 100%;
+			height: 300px;
+		}
+		.container {
+			width: 100%;
+			height: 700px;
+			padding: 100px 10px 0px;
+		}
+	}
+}
+
+@media screen and (max-width: $mobile) {
+	.location {
+		.traffic {
+			li {
+				a {
+					width: 100px;
+				}
+			}
+		}
+		.branch {
+			li {
+				a {
+					width: 70px;
+				}
+			}
+		}
+		.container {
+			width: 100%;
+			height: 900px;
+			padding: 100px 10px 0px;
+			h1 {
+				font-size: 35px;
+				width: 100%;
+			}
+			.tab {
+				width: 100%;
+				input[type="radio"] {
+					&:checked ~ label h2 {
+						left: 70%;
+					}
 				}
 			}
 		}
