--- a/scss/_sub_layout.scss
+++ b/scss/_sub_layout.scss
@@ -321,7 +321,7 @@
 				margin-bottom: 20px;
 			}
 			ul {
-				// width: 100%;
+				width: 100%;
 				li {
 					margin-left: 0px;
 					margin: 5px;
