--- a/scss/_youtube.scss
+++ b/scss/_youtube.scss
@@ -85,3 +85,31 @@
 		}
 	}
 }
+
+@media screen and (max-width: $tablet) {
+	.vidList {
+		justify-content: center;
+		align-items: center;
+		article {
+			width: 380px;
+			height: 380px;
+			margin-right: 20px;
+			&:nth-child(4n) {
+				margin-right: 20px;
+			}
+		}
+	}
+}
+
+@media screen and (max-width: $mobile) {
+	.vidList {
+		article {
+			width: 100%;
+			height: 100%;
+			margin: 10px auto;
+			&:nth-child(4n) {
+				margin-right: 0px;
+			}
+		}
+	}
+}
