--- a/scss/_join.scss
+++ b/scss/_join.scss
@@ -27,6 +27,13 @@
 					font-size: 16px;
 					font-family: "BlackHanSans";
 				}
+				p {
+					font-size: 12px;
+					font-family: "BlackHanSans";
+					font-weight: bold;
+					color: red;
+					margin-top: 5px;
+				}
 			}
 			table {
 				width: 100%;
@@ -80,12 +87,13 @@
 						padding: 10px;
 						border: 1px solid #aaa;
 					}
-					// p {
-					// 	font: 11px/1 "맑은 고딕";
-
-					// 	color: hotpink;
-					// 	margin-top: 5px;
-					// }
+					p {
+						font-size: 12px;
+						font-family: "BlackHanSans";
+						font-weight: bold;
+						color: red;
+						margin-top: 5px;
+					}
 				}
 			}
 		}
