--- a/css/style.css
+++ b/css/style.css
@@ -1993,7 +1993,7 @@ table {
   padding: 10px;
 }
 #information.action .inner .wrap {
-  width: 600px;
+  width: 50%;
   height: 100%;
   margin-right: 20px;
 }
@@ -2033,6 +2033,7 @@ table {
   margin-top: -81px;
   border-radius: 0px;
   min-width: 500px;
+  width: 50%;
 }
 #information.action .QiuckJoin form h1 {
   color: rgba(255, 255, 255, 0.735);
@@ -2089,8 +2090,14 @@ table {
   font-size: 16px;
   line-height: 1px;
 }
-#information.action .QiuckJoin form fieldset label[for=agree] {
+#information.action .QiuckJoin form fieldset table td input[type=tel],
+#information.action .QiuckJoin form fieldset table td #tell {
+  width: 30%;
+  padding: 5px;
   font-size: 14px;
+}
+#information.action .QiuckJoin form fieldset label[for=agree] {
+  font-size: 16px;
   text-align: left;
   cursor: pointer;
 }
@@ -2500,6 +2507,9 @@ table {
   }
   #information.action .QiuckJoin {
     margin: 50px auto 0;
+  }
+  #information.action .QiuckJoin form fieldset table td {
+    padding: 0px;
   }
   #services {
     padding: 100px 0px 400px;
