--- a/css/style.css
+++ b/css/style.css
@@ -1576,6 +1576,95 @@ table {
     margin-right: 0px;
   }
 }
+.result {
+  width: 100%;
+  margin: 0 auto;
+  min-height: 100vh;
+  max-width: 1180px;
+}
+.result .wrap {
+  width: 1180px;
+  position: relative;
+}
+.result .wrap article {
+  width: 100%;
+  height: 700px;
+  overflow: hidden;
+  opacity: 0.7;
+}
+.result .wrap article img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.result .wrap .txt {
+  width: 400px;
+  height: 500px;
+  padding: 130px 20px;
+  position: absolute;
+  top: 50%;
+  right: 0px;
+  transform: translateY(-50%);
+  background: linear-gradient(135deg, rgba(235, 213, 69, 0.989), #f1af22);
+}
+.result .wrap .txt h2 {
+  font-size: 30px;
+  font-family: "BlackHanSans";
+  color: black;
+}
+.result .wrap .txt p {
+  font-size: 20px;
+  padding-left: 5px;
+  color: #222;
+  padding: 10px 0px;
+}
+.result .wrap .txt a {
+  display: block;
+  border: 1px solid #bbb;
+  background-color: #efefef;
+  width: 50%;
+  margin-left: 50%;
+  font-size: 15px;
+  text-align: center;
+  color: #222;
+  letter-spacing: 1px;
+  font-family: "BlackHanSans";
+}
+.result .wrap .txt a:hover {
+  background: #fff;
+  color: #555;
+}
+
+@media screen and (max-width: 1179px) {
+  .result .wrap {
+    width: 100%;
+  }
+  .result .wrap article {
+    height: 100%;
+  }
+}
+@media screen and (max-width: 539px) {
+  .result .wrap {
+    width: 100%;
+  }
+  .result .wrap article {
+    height: 100%;
+  }
+  .result .wrap .txt {
+    padding: 20px;
+    width: 300px;
+    height: 300px;
+  }
+  .result .wrap .txt h2 {
+    font-size: 20px;
+  }
+  .result .wrap .txt p {
+    font-size: 15px;
+  }
+  .result .wrap .txt a {
+    font-size: 10px;
+  }
+}
 .Scroll {
   position: fixed;
   right: 1vw;
