--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,6 +13,7 @@ $mobile: 539px;
 @import "reset.scss";
 @import "sub_layout.scss";
 @import "youtube.scss";
+@import "result.scss";
 
 .Scroll {
 	position: fixed;
