--- a/scss/style.scss
+++ b/scss/style.scss
@@ -564,6 +564,15 @@ $mobile: 539px;
 							line-height: 1px;
 							color: #fff;
 						}
+						p {
+							font-size: 12px;
+							font-family: "BlackHanSans";
+							font-weight: bold;
+							color: red;
+							margin-top: 5px;
+							text-align: left;
+							padding-left: 13%;
+						}
 					}
 					td {
 						// border-bottom: 1px solid #bbb;
@@ -591,12 +600,27 @@ $mobile: 539px;
 							padding: 5px;
 							font-size: 14px;
 						}
+						p {
+							font-size: 12px;
+							font-family: "BlackHanSans";
+							font-weight: bold;
+							color: red;
+							// color: pink;
+							margin-top: 5px;
+						}
 					}
 				}
 				label[for="agree"] {
 					font-size: 16px;
 					text-align: left;
 					cursor: pointer;
+					p {
+						font-size: 12px;
+						font-family: "BlackHanSans";
+						font-weight: bold;
+						color: red;
+						margin-top: 5px;
+					}
 				}
 			}
 		}
