--- a/scss/style.scss
+++ b/scss/style.scss
@@ -114,19 +114,6 @@ $mobile: 539px;
 					}
 				}
 			}
-			// 에프터선 그은 이유 : nav랑 다르게 보더바텀만 좀 연하게 해주고싶어서,, =>
-			// &::after {
-			// 	content: " ";
-			// 	display: block;
-			// 	width: 100%;
-			// 	left: 50%;
-			// 	top: 90%;
-			// 	transform: translate(-50%);
-			// 	height: 2px;
-			// 	// opacity: 0.5;
-			// 	position: absolute;
-			// 	background-color: black;
-			// }
 		}
 		.btnCall {
 			position: absolute;
@@ -461,7 +448,7 @@ $mobile: 539px;
 		}
 	}
 }
-
+// 인포메이션 영역
 #information.action {
 	width: 100%;
 	padding-bottom: 150px;
@@ -639,9 +626,9 @@ $mobile: 539px;
 			letter-spacing: 1px;
 		}
 	}
-	main {
+	.inner {
 		width: 100%;
-		.inner {
+		.wrapUl {
 			ul {
 				width: 100%;
 				display: flex;
@@ -650,10 +637,10 @@ $mobile: 539px;
 				padding-top: 80px;
 
 				li {
-					width: 100%;
+					// width: 100%;
 					height: 100%;
-					// display: block;
-					// padding: 1px 41px;
+					display: block;
+					padding: 1px 41px;
 					font-weight: bold;
 					font-size: 18px;
 					line-height: 1px;
@@ -679,7 +666,7 @@ $mobile: 539px;
 				}
 			}
 		}
-		section {
+		.wrapArc {
 			width: 100%;
 			position: relative;
 			margin-top: 50px;
@@ -710,7 +697,7 @@ $mobile: 539px;
 						transition: 0.5s;
 					}
 				}
-				.wrap {
+				.txt {
 					float: left;
 					width: 50%;
 					overflow: hidden;
@@ -754,7 +741,7 @@ $mobile: 539px;
 					}
 				}
 				&.on {
-					display: flex; //활성화 된 article만 보이게 하도록
+					display: flex;
 					opacity: 1;
 					visibility: visible;
 				}
@@ -1006,8 +993,8 @@ $mobile: 539px;
 			overflow: hidden;
 			padding: 0px 10px;
 		}
-		main {
-			section {
+		.inner {
+			.wrapArc {
 				article {
 					width: 100%;
 					height: 500px;
@@ -1016,7 +1003,7 @@ $mobile: 539px;
 						width: 100%;
 						height: auto;
 					}
-					.wrap {
+					.txt {
 						height: auto;
 						width: 100%;
 						a {
@@ -1110,8 +1097,8 @@ $mobile: 539px;
 			overflow: hidden;
 			padding: 0px 10px;
 		}
-		main {
-			.inner {
+		.inner {
+			.wrapUl {
 				width: 100%;
 				max-width: 1180px;
 				overflow: hidden;
@@ -1127,7 +1114,7 @@ $mobile: 539px;
 					}
 				}
 			}
-			section {
+			.wrapArc {
 				article {
 					display: block;
 					width: 100%;
@@ -1136,7 +1123,7 @@ $mobile: 539px;
 						width: 100%;
 						height: auto;
 					}
-					.wrap {
+					.txt {
 						height: auto;
 						width: 100%;
 						padding: 20px 60px 20px 20px;
